--- a/wpa_supplicant/README
+++ b/wpa_supplicant/README
@@ -313,6 +313,7 @@ TLSv1 implementation can be used for TLS functionaly.
 CONFIG_IEEE8021X_EAPOL=y
 CONFIG_EAP_MD5=y
 CONFIG_EAP_MSCHAPV2=y
+CONFIG_EAP_SOCKET=y
 CONFIG_EAP_TLS=y
 CONFIG_EAP_PEAP=y
 CONFIG_EAP_TTLS=y
